adding google analictics
add to the last page to google analicts

--- a/privacy/privacy.html
+++ b/privacy/privacy.html
@@ -1,5 +1,14 @@
 <html>
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HZZ18EZ0WC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HZZ18EZ0WC');
+</script>
 	    <!-- Facebook Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
