--- a/form.html
+++ b/form.html
@@ -10,7 +10,15 @@
 <script src="https://wzrd.in/standalone/promise-polyfill@latest"></script>
 <script src="https://wzrd.in/standalone/whatwg-fetch@latest"></script> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y3Q0WCFBCE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Y3Q0WCFBCE');
+</script>  
 </head>
 <body>
 
