--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.0/build/pure-min.css"><link rel="stylesheet" href="./style1.css">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TN5SZPM9F2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-TN5SZPM9F2');
+</script>
 </head>
 <body>
 <!-- partial:index.partial.html -->
