--- a/thankyou.html
+++ b/thankyou.html
@@ -102,6 +102,15 @@ h1{
 } 
     
     </style>
+     <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-J9142ENBQ9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-J9142ENBQ9');
+</script>
     </head>
 <body>
     
