--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ section h3 {
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="_csrf" content="IwC3meotu_W302c8Gs0C60_2J5fbKA32_glbKnbDKUc" />
 	
-			<meta name="description" content="onlineclasses1 makes it surprisingly easy to create a high-quality website, blog or online store. Over 40 million people use Weebly to bring their unique ideas to life.">
+			<meta name="description" content="onlineclasses1 makes it surprisingly easy to create a high-quality website, blog or online store. Over 40 million people use onlineclasses1.com to bring their unique ideas to life.">
 	
 	<meta property="og:title" content="onlineclasses1 is the easiest way to create a website, store or blog">
 	<meta property="og:type" content="company">
