--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ html, body {
   background: -webkit-linear-gradient(top,rgba(0,0,0,0) 0,rgba(0,0,0,.8) 80%,rgba(0,0,0,.8) 100%);
   background: linear-gradient(to bottom,rgba(0,0,0,0) 0,rgba(0,0,0,.8) 80%,rgba(0,0,0,.8) 100%);
 }
-section h3 {
+.demo2 {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -120,10 +120,11 @@ section h3 {
 </head>
 <body>
  <section id="section01" class="demo">
-  <h3>onlineclasses1.com</h3>
+
+     <h3 class="demo2">onlineclasses</h3>
+     
 
 </section>
-
   
 
     
@@ -279,7 +280,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.Onboarding.RPC","model_namespace":"_W.On
 			<div class="js-fadeScroll landing-page-container" data-initial-scroll-tracking-section="mobileapp">
 				<div class="landing-page-content">
 					<h2 class="landing-page-title">Run your business on&nbsp;the&nbsp;Andriod & IOS</h2>
-					<p class="landing-page-text">Get unchained from your desk. Weebly is the only platform that lets you edit and manage your site or store from any device.</p>
+					<p class="landing-page-text">Get unchained from your desk. Onlineclasses1.com is the only platform that lets you edit and manage your site or store from any device.</p>
 					<div class="landing-page-btn-container">
 						<a href="form.html" ><button style="font-size:18px;color:white;" class="landing-page-btn-container__item landing-page-btn landing-page-btn--solid">
                           	Get Started  </button>
