--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
+    <link href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS6E5AE2WXcewJ6zHWMmxfWUSOjBmcjjMj9gmPg-eyRI1jM5dknnn63pvd3-fqDLUJP5TDw6UXh2iZWUBVmXuqr1TV6JBH32lc&usqp=CAU&ec=45725304" rel="icon" type="image/x-icon" />
       <!-- jQuery -->
     <script type = "text/javascript" src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <!-- jQueryUI -->
@@ -98,7 +99,7 @@ html, body {
 
     </style> 
   <meta charset="UTF-8">
- 	<title>onlineclasses</title>
+ 	<title>onlineclasses1.com</title>
 	
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
