--- a/thankyou.html
+++ b/thankyou.html
@@ -30,6 +30,10 @@ src="https://www.facebook.com/tr?id=330345064625520&ev=PageView&noscript=1"
   gtag('js', new Date());
 
   gtag('config', 'G-J9142ENBQ9');
+    
+    gtag('event', 'screen_view', {
+  'screen_name' : 'thankyoutest'
+});
 </script>
     
       <!-- thank youpage tag (gtag.js) - Google Analytics -->
