--- a/thankyou.html
+++ b/thankyou.html
@@ -31,9 +31,12 @@ src="https://www.facebook.com/tr?id=330345064625520&ev=PageView&noscript=1"
 
   gtag('config', 'G-J9142ENBQ9');
     
-    gtag('event', 'screen_view', {
-  'screen_name' : 'thankyoutest'
-});
+  gtag('event', 'page_view', {
+  page_title: '<Page Title>',
+  page_location: '<Page Location>',
+  page_path: '<Page Path>'
+  send_to: '<GA_MEASUREMENT_ID>'
+})
 </script>
     
       <!-- thank youpage tag (gtag.js) - Google Analytics -->
