--- a/index.html
+++ b/index.html
@@ -19,16 +19,15 @@ src="https://www.facebook.com/tr?id=330345064625520&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Facebook Pixel Code -->
     
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-TN5SZPM9F2"></script>
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-171685955-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-TN5SZPM9F2');
+  gtag('config', 'UA-171685955-1');
 </script>
-     <!-- my site tag - Google Analytics -->
     
     <link href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS6E5AE2WXcewJ6zHWMmxfWUSOjBmcjjMj9gmPg-eyRI1jM5dknnn63pvd3-fqDLUJP5TDw6UXh2iZWUBVmXuqr1TV6JBH32lc&usqp=CAU&ec=45725304" rel="icon" type="image/x-icon" />
       <!-- jQuery -->
