--- a/form.html
+++ b/form.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
+     	<title>onlineclasses1.com</title>
      <!-- Facebook Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
@@ -120,8 +121,7 @@ tiempo central<br><br>
 			<div class="sign-up-htm">
 				
 					<label for="check"><span class="icon"></span> 
-en esta clase aprenderá cómo construir su sitio web comercial y ejecutarlo todo desde 0 BENEFICIOS
-<br>
+
 
 <div class="group">
                         </div></label>
